# Agents

./: .env.example  README.md
.github/workflows/: readme.txt  readme_CI_CD_and_Notebook_Runners_for_Agents.md  wikipedia_math_runner.yml
0_Template/: README.md
1_Wikipedia_and_Math/: README.md  agent_langchain_v1.py  agent_langchain_v2.py  agent_langchain_v3.py  requirements.txt
2_LangChain/: README.md  pyproject.toml
2_LangChain/notebooks/: 01-intro-AAL.ipynb
