[project]
name = "2-langchain"
version = "0.1.0"
description = "GenAI Engineer's portfolio for LangChain with Gemini and OpenAI"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.5",
    "google-auth>=2.40.3",
    "ipywidgets>=8.1.7",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.3",
]
